--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": ["animewaifu", "terminalwaifu"],
   "author": "Maruf Ovi",
   "license": "MIT",
-  "description": "",
+  "description": "A cli tool to display random AnimeWaifu image on terminal.",
   "dependencies": {
     "axios": "^1.7.7",
     "terminal-image": "^3.0.0"
